fix(styles): replace custom spacings with fixed values
Remove `spacings.css` and replace CSS spacing variables with corresponding fixed pixel values across styles. Simplifies theme structure and improves maintainability.

--- a/src/app/(home)/styles.module.css
+++ b/src/app/(home)/styles.module.css
@@ -3,14 +3,14 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  padding: var(--spacing-16);
+  padding: 16px;
   flex-grow: 1;
   justify-content: center;
   align-items: center;
 }
 
 .header {
-  margin-bottom: var(--spacing-40);
+  margin-bottom: 40px;
   font-size: var(--font-size-36);
   font-weight: var(--font-weight-600);
   text-align: center;
@@ -21,7 +21,7 @@
 .main {
   display: flex;
   flex-direction: column;
-  gap: var(--spacing-16);
+  gap: 16px;
   height: fit-content;
   justify-content: center;
   align-items: center;
@@ -31,10 +31,10 @@
 .wrapper_images {
   display: flex;
   flex-wrap: wrap;
-  gap: var(--spacing-32);
+  gap: 32px;
   width: 100%;
   justify-content: center;
-  padding: 0 var(--spacing-8);
+  padding: 0 8px;
 
   & img {
     position: relative !important;
@@ -56,7 +56,7 @@
 }
 
 .title {
-  margin-bottom: var(--spacing-16);
+  margin-bottom: 16px;
   font-weight: var(--font-weight-500);
   text-align: center;
   color: var(--color-blue-light);
