--- a/src/components/atoms/Button/styles.module.css
+++ b/src/components/atoms/Button/styles.module.css
@@ -5,7 +5,7 @@
   border-radius: var(--radius-4);
   justify-content: center;
   align-items: center;
-  padding: var(--spacing-12) var(--spacing-28);
+  padding: 12px 28px;
   background-color: var(--color-tertiary);
   cursor: pointer;
   color: var(--color-white);
