--- a/src/components/organisms/ErrorFallback/styles.module.css
+++ b/src/components/organisms/ErrorFallback/styles.module.css
@@ -5,19 +5,19 @@
   min-height: 100vh;
   justify-content: center;
   align-items: center;
-  padding: var(--spacing-8);
+  padding: 8px;
 }
 
 .header {
-  margin-bottom: var(--spacing-32);
-  font-size: var(--spacing-36);
+  margin-bottom: 32px;
+  font-size: 36px;
   font-weight: var(--font-weight-500);
 }
 
 .container {
   display: flex;
   flex-direction: column;
-  gap: var(--spacing-8);
+  gap: 8px;
   width: 100%;
   align-items: center;
   padding: 0;
